# mcp-demo

./: .env.template  .gitignore  Dockerfile  README.md  README_CN.md  pyproject.toml  requirements-dev.txt  requirements.txt  smithery.yaml
doc/: mcp_architecture.puml
mysql/: .env.example  README.md  client.py  cursor_config.json  requirements.txt  server.py
src/mysql/: .env.template  __init__.py  client.py  server.py
weather/: .env.example  README.md  cursor_config.json  requirements.txt  weather_mcp_server.py
